...
      subtitle: Column(
        crossAxisAlignment: CrossAxisAlignment.start,
        children: <Widget>[
          Text(context.loc.planEditPageWithTargetDateSubtitle),
          if (planId != null && plan.withTargetDate && plan.targetDate != null)
            Text(
                key: const Key('target-status'),
                context.loc.planEditPageWithTargetDateStatusSubtitle(
                    plan.targetDate!,
                    deviationDays > 0
                        ? 'ahead'
                        : deviationDays < 0
                            ? 'behind'
                            : 'on time',
                    deviationDays.abs())),
        ],
      ),
      trailing: Switch(
        key: const Key('with-target-date'),
        value: plan.withTargetDate,
        onChanged: (bool value) {
          planEdit.updateWithTargetDate(value);
        },
      ),
    );
...
