...
    final plan = ref.watch(planEditProviderFamily(planId));
    final planName = getPlanName(context, plan);
    final planEdit = ref.read(planEditProviderFamily(planId).notifier);

    return ListTile(
        title: TextFormField(
      key: const Key('plan-name'),
      autofillHints: const ['plan-name'],
      autofocus: true,
      controller: TextEditingController(text: planName),
      decoration:
          const InputDecoration(hintText: 'Enter a name for your reading plan'),
      onChanged: (name) =>
...
