...
  @override
  Widget build(BuildContext context, WidgetRef ref) {
    final plans = ref.watch(plansProvider);

    return plans.plans.isEmpty
        ? Center(
            key: const Key('no-plan-yet'),
            child: Text(context.loc.plansPageNoPlanYet),
          )
        : GridView.extent(
            childAspectRatio: 1.6,
            maxCrossAxisExtent: 600,
            padding: const EdgeInsets.all(20),
...
