...
          version: '1.0');
      final bookmark = Bookmark(dayIndex: 0, sectionIndex: -1);
      final plan = Plan(
          id: const Uuid().v4(),
          name: toBeginningOfSentenceCase(scheduleKey.type.name)!,
          scheduleKey: scheduleKey,
          language: 'en',
          bookmark: bookmark,
          withEndDate: true,
          showEvents: true,
          showLocations: true);

      return [...plans, plan];
...
