...
            children: [
              Positioned(
                  right: 0,
                  top: 5,
                  child: date == null
                      ? Text((dayIndex + 1).toString(),
                          key: const Key('day-index'),
                          style: Theme.of(context).textTheme.bodySmall)
                      : Column(
                          crossAxisAlignment: CrossAxisAlignment.end,
                          children: [
                            Text(
                              date!.day.toString(),
                              key: const Key('date'),
                              style: Theme.of(context).textTheme.bodySmall,
                            ),
                            Text(
                              context.loc.schedulePageCardWeekday(date!),
                              style: Theme.of(context).textTheme.bodySmall,
                            )
...
