...
          ? Column(
              // crossAxisAlignment: CrossAxisAlignment.start,
              children: [
                const SizedBox(height: 20),
                Text(
                  MaterialLocalizations.of(context).formatMonthYear(date),
                  key: const Key('month'),
                  style: Theme.of(context).textTheme.headlineSmall,
                ),
                dayCardWithDivider,
              ],
            )
          : dayCardWithDivider;
...
