...
          context: context,
          builder: (BuildContext context) => AlertDialog(
            title: Text(context.loc.schedulePageToggleReadDialogTitle),
            content: Text(context.loc.schedulePageToggleReadDialogText),
            actions: <Widget>[
              TextButton(
                key: const Key('reject-toggle-read'),
                onPressed: () => Navigator.pop(context, 'Cancel'),
                child:
                    Text(MaterialLocalizations.of(context).cancelButtonLabel),
              ),
              TextButton(
                key: const Key('confirm-toggle-read'),
                onPressed: () {
                  planNotifier.toggleRead(
                      dayIndex: dayIndex,
                      sectionIndex: sectionIndex,
                      force: true);
                  Navigator.pop(context, 'OK');
...
